--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,12 +1,12 @@
 - name: Team
-  link: /#Team
+  link: /#team
 - name: GARD
-  link: /#GARD
+  link: /#gard
 - name: Armory
-  link: /#Armory
+  link: /#armory
 - name: ART
-  link: /#ART
+  link: /#art
 - name: APRICOT
-  link: /#Apricot
+  link: /#apricot
 - name: Self-Study
-  link: /#Self-Study
+  link: /#self-study
