--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,5 @@
-remote_theme: pages-themes/cayman@v0.2.0
+theme: just-the-docs
 title: GARD Project
 description: Guaranteeing AI Robustness Against Deception
 show_downloads: false
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+
